Update launcher title and startup behavior
Changed window title to 'Multiple App Launcher - Admin' for clarity. Improved startup to use pythonw.exe if available, preventing console window appearance. Updated .gitignore to exclude /dist directory and modified install.bat to activate conda environment before running pyinstaller.

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ build/adminLauncher/warn-adminLauncher.txt
 build/adminLauncher/xref-adminLauncher.html
 adminLauncher.spec
 dist/launcher_profiles.json
+/dist
